--- a/Manuscript_Fig1-mutation_landscape_plot.Rmd
+++ b/Manuscript_Fig1-mutation_landscape_plot.Rmd
@@ -76,7 +76,7 @@ oncoplot(maf = mutations.maf,
 #####################################################
 
 # standard list of significantly mutated genes, along with clinical data annotations 
-clinData.df <- read.table("/Volumes/shung/projects/PMBCL_exomes/data/clinData.v3.txt", sep = "\t", header = TRUE)
+clinData.df <- read.table("/Volumes/shung/projects/PMBCL_exomes/data/clinData.v4.txt", sep = "\t", header = TRUE)
 
 # ALL mutations (not just ones in significant genes)
 mutations.maf <- read.maf("/Volumes/shung/projects/PMBCL_exomes/snv_indel_analysis/maf/mutation_summary-paired_and_unpaired.maf", clinicalData = clinData.df)
@@ -89,7 +89,8 @@ xseq.trans_genes <- scan(file = "/Volumes/shung/projects/PMBCL_exomes/XSeq/analy
 
 # combine the two lists for Fig 1
 #fig1.genes <- c(sig.genes, xseq.trans_genes, "B2M")
-fig1.genes <- c(sig.genes, "B2M")
+#fig1.genes <- c(sig.genes, "B2M")
+fig1.genes <- sig.genes
 
 # colours for annotation tracks
 annot.colors <- list(
@@ -100,15 +101,17 @@ annot.colors <- list(
                             "GCB"="cyan3", 
                             "Unclear"="black", 
                             "No_data"="white"),
-  Mediastinal = c("Yes"="mediumpurple1", "No"="black"))
+  Biopsy_Site = c("Mediastinal"="mediumpurple1", "Non-mediastinal"="black"))
 
 patients.ordered <- c("PA016", "PA073", "PA056", "PA002", "PA045", "PA072", "PA070", "PA018", "PA009", "PA010", "PA011", "PA003", "PA014", "PA069", "PA001", "PA013", "PA021", "PA017", "PA015", "PA034", "PA032", "PA033", "PA005", "PA062", "PA089", "PA027", "PA026", "PA086", "PA093", "PA042", "PA035", "PA053", "PA054", "PA031", "PA065", "PA076", "PA097", "PA064", "PA058", "PA008", "PA050", "PA067", "PA066", "PA004", "PA082", "PA068", "PA028", "PA052", "PA051", "PA079", "PA038", "PA024", "PA083", "PA096", "PA075", "PA037", "PA049", "PA006", "PA080", "PA091", "PA077", "PA020", "PA063", "PA088", "PA094", "PA022", "PA061", "PA029", "PA092", "PA041", "PA040", "PA048", "PA039", "PA043", "PA055", "PA044", "PA060", "PA036", "PA071", "PA057", "PA023", "PA007", "PA025", "PA059", "PA019", "PA085", "PA095", "PA047", "PA030", "PA078", "PA074", "PA084", "PA087", "PA081")
 
+genes.to_ignore <- c("FPGT", "IFNL3", "IRX2", "MS4A1", "GDF11", "SERPINB3", "TSPAN19", "ALX1", "KLF9", "LHFPL3", "SPINK1")
+
 oncoplot(maf = mutations.maf, 
          genes = fig1.genes, 
-         clinicalFeatures = c("Cohort", "Gender", "Lymph3Cx", "Mediastinal"),
+         clinicalFeatures = c("Cohort", "Gender", "Lymph3Cx", "Biopsy_Site"),
          annotationColor = annot.colors, 
-         legendFontSize = 12, showTumorSampleBarcodes = TRUE,
+         legendFontSize = 12, showTumorSampleBarcodes = TRUE, genesToIgnore = genes.to_ignore,
          drawColBar = FALSE, sampleOrder = patients.ordered, removeNonMutated = FALSE)
 
 ```
